# ChangeLog for dev-games/ggz-client-libs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.49 2013/02/24 18:08:12 ago Exp $

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for sh, wrt bug #449894

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for x86, wrt bug #449894

  07 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for alpha, wrt bug #449894

  07 Jan 2013; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for HPPA (bug #449894).

  06 Jan 2013; Markus Meier <maekke@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  arm stable, bug #449894

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for sparc, wrt bug #449894

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for ia64, wrt bug #449894

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for ppc64, wrt bug #449894

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for ppc, wrt bug #449894

  03 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  ggz-client-libs-0.0.14.1-r1.ebuild:
  Stable for amd64, wrt bug #449894

*ggz-client-libs-0.0.14.1-r1 (01 Dec 2012)

  01 Dec 2012; Tupone Alfredo <tupone@gentoo.org>
  +ggz-client-libs-0.0.14.1-r1.ebuild:
  revbump following bug #445420 by Mart Raudsepp

  27 Apr 2012; Tupone Alfredo <tupone@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild,
  files/ggz-client-libs-0.0.14.1-linguas.patch:
  Fix linguas patch. Bug #413283 by far jump

  26 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  ignore broken linguas patch for now

  22 Apr 2012; Tupone Alfredo <tupone@gentoo.org>