@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX ggz-client-libs-0.0.14.1-destdir.patch 1136 SHA256 609cc014c6964034e0cdf1d4245ae6383e4aae0d41273a266ef6570d2badfc27 SHA512 58642741eb7888851453c00e515868fe1d3e1a96cde4e26b56e0a487226a9b89484ab660d2e8fe31af6251e8eff276f929558895d5d1fc771aa8a6da8571b5ba WHIRLPOOL 671ea7d53a7104f3d06da77babc669e4c135f393c48b8a895fb59e2c0e7ed64ed1e50be6d5a85c14412107b97366e513429fd09214fe3c78ecf7fa449d5c7913
 AUX ggz-client-libs-0.0.14.1-linguas.patch 800 SHA256 15fc1de7bf234b8ad7fb4edc780c55f3c8a0b2fd42c52cd696e1f3366585488d SHA512 8e27d7b32d30c37b424956cfab0475572528c89707d0db3c428ac9b431d5706f98242815e4c6426d2ba66f33eb127cdcfc7725e4a5a32ce3b9e9ffcae82ae73a WHIRLPOOL 058c54769ab1c9179e85ffd30198b1dcb3dc5f0c631b3d9f3cc9e73c28c213dc190e421b972485490aa0999279540b5486f05c3ac60c4b737dab48e84388ba2d
 DIST ggz-client-libs-0.0.14.1.tar.gz 614117 SHA256 0a7bec1a381a450f650890b36253893df0001873ba1f414573a4247298107680 SHA512 d11d3402d5013096cfbb517c765df31f39df6b4c6f303f6791a1a475645134c8e27e487135eea13ddd08eb56fa2510ce07c176c1d2d2af8dbd1ae54334f6cce6 WHIRLPOOL 36ed44bfe989369388e1ce062f3ea858c5771573f1300c3fcf32c17091b7975e8471124490b331888869e2abfba71a3e754412c756c63c5ae5c3e4c7672abad5
-EBUILD ggz-client-libs-0.0.14.1-r1.ebuild 883 SHA256 c8c5327096671966a37f0505f840eec21cfa936b90ffdf78ee8d12f005a067c9 SHA512 fefa26ff67f391c7aebf285267a182d0c296d0a06e194e45619f172506d82f88d001f6aaa2015a43fcca3c4dc7f3a825a41f45bac171f6f6674c8526818e5f69 WHIRLPOOL 7b297f7cde442326629e2593227c2067d4ff1424103c3cc190f0fd3eb95e591d7a7652e777765aa86573b71a7232559f104a474d81d75447acc658fe83bee487
-EBUILD ggz-client-libs-0.0.14.1.ebuild 882 SHA256 d01986038869ae17d4805a74eb5086a3532b564709eccbaf0ee8fcbf780810af SHA512 2d7a4efabe002d085c5dd23499a5987d6981fc057c92ab947e727752920433967578acb0d05b19c83d394dda1ceea825991d7c0254d4a498062450d177a1439c WHIRLPOOL cb7e8be2347c449e4ade582de1933ce185d170d5436c7475e66b351df235711af8359cd87ed206912185594297d83ab5d4e73b9e82bfd185b22c3fce818f8203
-MISC ChangeLog 6690 SHA256 59890775e37772dd4e9691d72291c31bbd54fd6a81dafbec580100143927ec2a SHA512 48459151efeb0234a8d3a22cd5f61593f9e69c7889daa9a62792ed0a0b21aa70741af964224d9cb4aa0029d576aa128cf4a06548181efbbba7b0ea8bbeded121 WHIRLPOOL be72321f5effa82c892477ab29404621588804cdb2acdf626c5d8e09f3a5c5f5005a12dd160d6df0d79db018348c882a67ea3a900fc02faa4e2760d9aba9db30
+EBUILD ggz-client-libs-0.0.14.1-r1.ebuild 894 SHA256 a9030f5e6ecbe196fc46a4fb23c2cec82d85ab806af47b88d7ae8c6cbda6fbc6 SHA512 818411f9f273526a3069e3abafadfebebbae475b4ece2ecbf71b207630e9d1d2b4ea88db68212910f376fe94211531e79750d8a00c83b88967fddc65bffd4fec WHIRLPOOL 4150d0cf237e02658e3efcee0aa207260864ef2752b8027960bb1b5acaa79c514cc39e0e9de88f6a8bc472b1c44f76a21e81254f7ea4b7e6902bb94b79dfa885
+EBUILD ggz-client-libs-0.0.14.1.ebuild 890 SHA256 0b28fce20996d64fcca8a88378c1121af04fe4fe0253837f0133ea513fa5f423 SHA512 de06ff1a254117cd1081a9b3866a48ee4f385a2ee7db408c7924d5d4e554ace3c0aeb2446f4f5ff01dee4f1995f4963deb43e32ebbf73a3f4e45db206a7567df WHIRLPOOL c659297e45ceee744ec0bf8654caf415bb98011b65c59fee10f1f4970986ef3608763d6340d3dc96bc5072cbb46e5bdc40677ddd4528ab59b36a73f07eec8081
+MISC ChangeLog 6838 SHA256 ae6b2eeb2c236fc04abc608223a23390b2ece962619562fc82ddf059c136aa77 SHA512 b4571b0ecd76fde441c6764e85b2e47b785bee7287ea13d8406cbdd349bb9bed98a85ff3d32ff7a277abd3d3f34d32b9feab7b3454982d4ea09a6b2d1fefdc93 WHIRLPOOL 0b97e42311e7c9c3d214d7e999f259ff5379184085d9041f5250d8ca0248f91ad575a41fb89b935ae434be9de41eb9c47fe7fcd26157ffd2b7c974a4a0c3258b
 MISC metadata.xml 428 SHA256 ca242ceeaf7a146b8ce0ad3ce0a7f1761edaf7324b735a2e910619ad9c6d29af SHA512 9ac8e1a091bf9ab8397039eb45dee04bd7a98fab3498a3fa720c1def4ac551c42336b3de22e208f77d11de2f1654f1b0daa6781c0402f11293c302c0e1a803b9 WHIRLPOOL 9231e0b6203750297f0ce5a5df921229679e2d1b51cae41c44ede48a79bb425894ce0c2ea8d9144a01f80711973f853a8f211ac1719d2f51aa745a7160ff2a0a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRKlaGAAoJELp701BxlEWfsKMP/ijVls0PsUhA0IUwz3IIQy0g
-SJ4CMB2iZkHuWvpZa+bWdKDAZ5f2WQtnhr92EJmBX/RyCUgZa73K6STkomycvIwz
-KeE1grG1nRBrUpy2utbfpyWLzHdGYwhzacaUpvFifMabTna6YUPChQ9fxGMVfFa9
-yb+ct6RcGI07PysTdZdZOuIldp2zDwaQT74t5OUT8dFjZnWWpzui6P2Q/RMFqcLU
-KRnuG/EpA0MCImFsdk7npLnwaDsTC5mNnpHdpq6wwHkqRBJ7nYWKPUNgMorZY4/u
-LYuMTnI7ye7foRkwvM+K2/LVGBF4JlR6ZNRu/ndDovVEeeSK3iAXENY47L5LS/n+
-DlXrm4QMHzosKjJ3AhcE5A8WI23tnnyTv6UKBm2se9K7rLfZ1CgvP36NzOOpy5td
-DKd0v8t1Kwxw4iLR2gCl+oIBNM6PeLm8Zo/olZcP15pDxL/53hVdiXS2Vxx9jgp6
-CMCpDvvWjx+v/DrN6ykmMtiEGKHMfnnNbUZYan7zaTa5a5rPOxdAWYlWJ3pd4izK
-FuzEMngE45o97ZAW+96epflmnJaVnq0c/KMP/bT4i16pqVTTXI4BKLs4IGIh6dBs
-b8dmihpNH083UiAq6U0awf4NeLCYZUiDDvmyf+DwmOUEB7ucnMTD01J9h8gFG3bU
-JxsKKh7xFuefnhPlLOYm
-=hrmx
+iQIcBAEBCAAGBQJS2AEGAAoJEJOE+m71LUu6YiEQAJIeU2qR1DwuiBOBwfnEptBj
+8sgaWl/h+WU4Er7U3Li7SWPEYSS3aYmwNZJjZo/K7LZ9h9K1kI6kgZ7clOSjLGAX
+1z8hLDe05PQ7juDxiGzWBlQpQjChbXVz6ZCyBOW+YXIOZ2MZpwkeUuNWQxuX1xx4
+mhXb0msYNCDzOImObPRi+eDVTIl+blnbUmRaJbX7OnHi3vp5rAg2A6vxc38TT5X3
+oh0qnAgOrxynF7vEz7/5W6XVFxAXsl0CWcDR8W29zyEs3PZYEqpbNehM8rSPP8Ms
+7caVXbWwpC8pglywTdO9Qdo26vzDm2ZQL6sviTRh87N4QJTWVufLORzeLClLN83D
+5hyyENdEOP3iZ9b2t7x0pp/68kMiqLjJks3cQuUqXi5VRDIB6WhW/LwtpV4ykjdE
+c7ZwCrrbDyf31QN9UbJylgrqaY0xJLUmFFz5o9da9AJuNyMHkwmKFSODbjoJxw+d
+8VnKw2fxJ/gAeJfaQh+vWur/ZgoTa2WgHN15AkVVzg1KWz6iFmIP4o4RsjWfAu6H
+6upi9S2lAIMfSgnjWW+XgjFJ4mIL7KiP8xAtD7DBbca1HH4fskUZ1MmM1IFg5TqO
+Wo4zdiuD1wwkTgFo/ASmG69hmjKY37QvagTh3oSC4d+HoLxg2QcBFcIR+yK21JET
+FOfLYywcMmLzimZXOxlW
+=NSFf
 -----END PGP SIGNATURE-----
