@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ggz-client-libs-0.0.14.1-r1.ebuild,v 1.10 2013/02/24 18:08:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ggz-client-libs-0.0.14.1-r1.ebuild,v 1.11 2014/01/16 15:55:07 blueness Exp $
 
 EAPI=4
 inherit base autotools games-ggz
@@ -9,7 +9,7 @@ DESCRIPTION="The client libraries for GGZ Gaming Zone"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="alpha amd64 arm ~hppa ia64 ppc ppc64 sh sparc x86 ~amd64-linux ~x86-linux"
+KEYWORDS="alpha amd64 arm ~hppa ia64 ~mips ppc ppc64 sh sparc x86 ~amd64-linux ~x86-linux"
 
 IUSE="debug static-libs"
 
