@@ -3,13 +3,23 @@ Hash: SHA256
 
 AUX libggz-0.0.14.1-gnutls3.patch 657 SHA256 6d3ea58f6b4ecfbfa9da2b427fbc84093c46fef68613b1be8346229ec288c40e SHA512 5a3268d33a7b5e379b522936beeb1df6d6f11a40f1c5b06b1f1deae6605d89c644a15c2e586acd4a8f93fd623cea9d6a9eb206a904d9add89567b5076bcfc157 WHIRLPOOL 9cb81dc6990d5d40555ad41024a03d07649c9a631582cf07dc7851bfbc20a927360723f7d8e39f2743d802441f91cf5e5ab728e7bc6fa5146b85b9485113a530
 DIST libggz-0.0.14.1.tar.gz 477382 SHA256 54301052a327f2ff3f2d684c5b1d7920e8601e13f4f8d5f1d170e5a7c9585e85 SHA512 ca034d8196c151a59d3afec6d37270a974b2f9d9c380f46ef01238077b7c3c1b5686cb5252754523d985963e14c88e27b39da3c362e7accfbe550bdd5837634d WHIRLPOOL 9db00d2604ada74f15bea792fcc3e1e14d7faa85be1dafdd82c6d824a3d4ae4a698b6c331a917f10175c68a6a37cb5935b98ffcbf17ef0f8dcd2878daf21050e
-EBUILD libggz-0.0.14.1.ebuild 871 SHA256 ff5c153dfab466c717b02729db2d5fb30000ee7966f1a8763c90867be04d0273 SHA512 fb00811d5ca0226f47982333f5699e48ea0d9561e1a4f68c7e30e567151d2d659461f028c01da2b1e2ee84f8b3eaa58efb5c5f33e4abf73871ed73b0a602e17b WHIRLPOOL f3d8b0a375facd230c0192ac241fee1795098ca1d966ea63994806b6fc8a91fcefa2fca168218a23510675b1bad24a30104c57ae83641428c8dd8beb70dc115e
-MISC ChangeLog 4156 SHA256 0b35a06612394c4895fedac677cd31fff4c95b1eb125fc0bc9bb26193339df51 SHA512 72277f3e9320209ea586edc58f0a4ee50bcd84d62b1e7774b62f7fb0474b5d6803acce8f9e31aa652cf20af6eab0038655744ef659e1c80aa6e546d7d4e2aa67 WHIRLPOOL 77586be356d9c072ef08084e47b7f3ecd5d5d9ae00c2facc53f596ec56938822ad2328029d58ed99155dae2597d4d9cbaf79058748a43917a8c5ab5a706e79ec
+EBUILD libggz-0.0.14.1.ebuild 879 SHA256 396cfd460bceca7f628e64c0485b51a1841921dfef2b22fc118e7661ec08bc84 SHA512 029969541b7c4f907263c5781bd300d534e8a2fe35e15d420354dd15aa32eebeccbcd6cc3c3e4d3fc4f3a2336dc768b2a2b7c2391396796c4af928b8c5049641 WHIRLPOOL df10f4e1bc2e2c1dd488e991b726747cf9da8d481b224915ec4bdbc1e07a921ad700a4ce52d79730bb64352f58d7deab1f33dfa08030cc793bd5aa161a0688f5
+MISC ChangeLog 4254 SHA256 560c5b69429430defea2a9cb95f1a8b228587538ac316cb4360fc098689a9b30 SHA512 42b6fa93d33a0232fca366afd6d0cd27623823a552bb1e59dbec265ebdca6acade286a507cba6f2938946855909472b2cbdf6eb697b37b87d2e880ce3b8d5591 WHIRLPOOL 340cb5fd618a5868fb0ea0ab134695d35aed75544d5895bac8cf386889c69f7ada6cb56fdba55df831af72749c472c84c2282a353edcd2738c0e0578eb4ae1b2
 MISC metadata.xml 428 SHA256 ca242ceeaf7a146b8ce0ad3ce0a7f1761edaf7324b735a2e910619ad9c6d29af SHA512 9ac8e1a091bf9ab8397039eb45dee04bd7a98fab3498a3fa720c1def4ac551c42336b3de22e208f77d11de2f1654f1b0daa6781c0402f11293c302c0e1a803b9 WHIRLPOOL 9231e0b6203750297f0ce5a5df921229679e2d1b51cae41c44ede48a79bb425894ce0c2ea8d9144a01f80711973f853a8f211ac1719d2f51aa745a7160ff2a0a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlA4fx8ACgkQIY77eQFFFC2fnwCfej3LICc6qeWwoIwoUsxDqkGF
-8+kAoO6vRFD1uDADaUBkEM3AD+D4/3oA
-=bhSj
+iQIcBAEBCAAGBQJS2ACtAAoJEJOE+m71LUu6kPsP/ieYOgYKoR3C+H4BAWo9PjxX
+OKfdo6d6IPUt4WUru71hp+qIo20+fgnISO9KllEjqTimkPgD6n0KynSMmOLZb0hA
+umJecA+ZtUkanfK1/iF61118LapN2aICZ7X0qZ76b12FHZLrpfuXi1K+IOXTHhka
+fEExRZuV0mIAaWrgC9hldWiN5lRbVbUvpNvF3yYE4eF+FcSEftnAEM+NWpQYa9Uz
+/jrHR55f5Z73e40Ll6dLvDesiVm1dhOHiBDy6EqdndVSDTySk+RSh2HEIbbpj4dH
+DLG4UiAiY3pGqGyu6W86bagZIfuwuQajfJuze41tGIr7nB9z3+eD5iq5cmxe09IM
+vEFplQ6R9aGhTV3113oCBPxv+/V4fFCp/DDDZIizY9kcIhoFp4EOfYDd7gV5Pa2L
+TVm0LGbCt+XLoZ6AroAPY3etUeLEnl1CT3smWIPXgK+F7P2zPFqO9iAL4MeaWIAA
+HqHEt9lgUlpzhLlZP1qVHtoS7xt2QiJT3+wyAeQPXt2N+lWQNddnLpwn5SS86Qzp
+L+hhw7sTq8zVmJ4AcV9gl8EZkLM/mpu6q4U0AJFmUa9C4SHpmgfM7rwm8ySpF8Fj
+zdfnODpEYxde9JKFfKS0TwvpgVR9oUNWI7tNtUo67Pj5yIqbjNtw7HsWZnV0uKzX
+zMyZprOBTrGrbNsr4bHz
+=6sU/
 -----END PGP SIGNATURE-----
