@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/libggz
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/libggz/ChangeLog,v 1.33 2012/08/25 07:30:28 tupone Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-games/libggz/ChangeLog,v 1.34 2014/01/16 15:53:50 blueness Exp $
+
+  16 Jan 2014; Anthony G. Basile <blueness@gentoo.org> libggz-0.0.14.1.ebuild:
+  Keyword ~mips
 
   25 Aug 2012; Alfredo Tupone <tupone@gentoo.org> libggz-0.0.14.1.ebuild,
   +files/libggz-0.0.14.1-gnutls3.patch:
